@@ -8,6 +8,7 @@ Next Release
 
 Not released yet (you guessed it).
 
+- Fix: update mode does not ignore required fields in subdocuments. Closes #72.
 - Fix: allow_unknown does not respect custom rules. Closes #66.
 - Fix typo in docstrings (Riccardo.)
 
